<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/lucas"
            android:title="@string/Lucas" />
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/elmer"
            android:title="@string/Elmer" />
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/lola"
            android:title="@string/Lolas" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/mas_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:title="@string/dragon_Ball" />
            <item
                android:id="@+id/menu_opcion_2"
                android:title="@string/pokemon" />
        </menu>
    </item>

</menu>