<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmento_elmer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_detalle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/lucas" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_de_detalle_personaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/Lucas"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descripcion_de_detalle_personaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:text="@string/texto_detalle_de_Lucas" />

            <Button
                android:id="@+id/btn_ir_a_trailes_lucas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                android:text="@string/ver_video"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
