<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/degradado"
    tools:context="co.edu.uniquindio.android.electiva.looneytunes.Fragments.ElmerFragment">

    <TextView
        android:id="@+id/titulo_de_detalle_personaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/Elmer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <ScrollView
    android:id="@+id/scrollView"
    android:layout_weight="2"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagen_detalle"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:src="@drawable/elmer" />
            <TextView
                android:id="@+id/descripcion_de_detalle_personaje"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/texto_detalle_elmer" />
    </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btn_ir_a_trailes_lucas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="14dp"
        android:background="@color/colorPrimary"
        android:text="@string/ver_video"
        />

</LinearLayout>
